# start2-a64-nand

JTAG/: JTAG.c  Makefile
LED/: LED.c  Makefile
SPISlaveDevice/: Makefile  SPISlaveDevice.c
START2_20180607/: CMakeLists.txt  KernelInterface.c  KernelInterface.h  jb_const.h  jb_io.h  jb_jtag.c  jb_jtag.h  jrunner.c  jrunner.h  main.c
START2_20180609/: CMakeLists.txt  UpdateImageCompress.c  UpdateImageCompress.h  main.c
START2_20181029/: CMakeLists.txt  ColorRemap.c  ColorRemap.h  Correction.c  Correction.h  Jpeg.c  Jpeg.h  KernelLed.c  KernelLed.h  KernelSpi.c  KernelSpi.h  KernelVideo.c  KernelVideo.h  LightAdjustment.c  LightAdjustment.h  PrinterControl.c  PrinterControl.h  Scan.c  Scan.h  Update.c  Update.h  list.h  main.c  main.h
VIDEO/: Makefile  VIDEO.c
